-[REFACTOR] Moving classes to the DM library because they are common code. Adjusting dependencies.
Former-commit-id: 691dd0aed4eb43ec9d82d36fa1a02f7fe1acbbf4
