# NeoCom-Infinity-Backend/src/main/java/org/dimensinfin/eveonline/neocom/infinity/backend/character/pilot/rest/v1/PilotControllerV1.java
@@ -11,10 +11,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import org.dimensinfin.eveonline.neocom.domain.Pilot;
-import org.dimensinfin.eveonline.neocom.infinity.core.rest.NeoComAuthenticatedController;
+import org.dimensinfin.eveonline.neocom.character.domain.PilotV1;
 import org.dimensinfin.eveonline.neocom.infinity.config.security.NeoComAuthenticationProvider;
+import org.dimensinfin.eveonline.neocom.infinity.core.rest.NeoComAuthenticatedController;
 
+/**
+ * Controller to the pilot set of endpoints. Those endpoints require authentication and are complementary to the public access endpoints.
+ */
 @RestController
 @Validated
 @RequestMapping("/api/v1/neocom")
@@ -32,8 +35,8 @@ public class PilotControllerV1 extends NeoComAuthenticatedController {
 	@GetMapping(path = "/pilots/{pilotId}",
 			consumes = "application/json",
 			produces = "application/json")
-	public ResponseEntity<Pilot> getPilotData( final @PathVariable @NotNull Integer pilotId ) {
+	public ResponseEntity<PilotV1> getPilotData( @PathVariable @NotNull final Integer pilotId ) {
 		this.validateAuthorizedPilot( pilotId );
-		return new ResponseEntity<>( this.pilotServiceV1.getPilotData( pilotId ), HttpStatus.OK );
+		return new ResponseEntity<>( this.pilotServiceV1.getAuthenticatedPilotData( pilotId ), HttpStatus.OK );
 	}
 }
