# NeoCom-Infinity-Backend/src/main/java/org/dimensinfin/eveonline/neocom/infinity/backend/universe/character/rest/v1/PublicCharacterControllerV1.java
@@ -10,8 +10,8 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import org.dimensinfin.eveonline.neocom.domain.PublicPilotV1;
-import org.dimensinfin.eveonline.neocom.infinity.backend.character.pilot.rest.v2.PilotServiceV2;
+import org.dimensinfin.eveonline.neocom.character.domain.PublicPilotV1;
+import org.dimensinfin.eveonline.neocom.infinity.backend.character.pilot.rest.v1.PilotServiceV1;
 
 /**
  * @author Adam Antinoo (adamantinoo.git@gmail.com)
@@ -21,17 +21,17 @@ import org.dimensinfin.eveonline.neocom.infinity.backend.character.pilot.rest.v2
 @Validated
 @RequestMapping("/api/v1/public")
 public class PublicCharacterControllerV1 {
-	private final PilotServiceV2 pilotServiceV2;
+	private final PilotServiceV1 pilotServiceV1;
 
 	// - C O N S T R U C T O R S
-	public PublicCharacterControllerV1( @NotNull final PilotServiceV2 pilotServiceV2 ) {
-		this.pilotServiceV2 = pilotServiceV2;
+	public PublicCharacterControllerV1( @NotNull final PilotServiceV1 pilotServiceV1 ) {
+		this.pilotServiceV1 = pilotServiceV1;
 	}
 
 	@GetMapping(path = "/pilots/{pilotId}",
 			consumes = "application/json",
 			produces = "application/json")
 	public ResponseEntity<PublicPilotV1> getPilotPublicData( @PathVariable @NotNull final Integer pilotId ) {
-		return new ResponseEntity<>( this.pilotServiceV2.getPilotPublicData( pilotId ), HttpStatus.OK );
+		return new ResponseEntity<>( this.pilotServiceV1.getPilotPublicData( pilotId ), HttpStatus.OK );
 	}
 }
